# WhatsAppBot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  swagger.yaml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  main.py
app/controllers/: __init__.py  admin_controller.py  auth_controller.py  whatsapp_controller.py
app/models/: base.py  family.py
app/routes/: admin.py  auth.py  whatsapp.py
app/services/: whatsapp_service.py
app/static/: index.html
app/templates/admin/: dashboard.html  dashboard_new.html  login.html
app/utils/: __init__.py  auth.py  generate_sample_data.py
app/utils/db/: init_db.py
config/: settings.py
scripts/: check_config.py  check_db.py  generate_sample_data.py  init_db.py  parse_token.py
tests/: conftest.py  test_admin.py  test_auth.py  test_whatsapp.py
